k8s/app1/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: dev-app1
  ports:
    - port: 80
      targetPort: 80
