k8s/app1/service-uat.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: uat
spec:
  type: ClusterIP
  selector:
    app: uat-app1
  ports:
    - port: 80
      targetPort: 80
