k8s/app1/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-prod
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: prod.lll.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
