k8s/app1/ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uat-app1-ingress
  namespace: uat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: uat.lll.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
